test/compile_errors/stage1/obj/deduplicate_undeclared_identifier.zig
export fn a() void {
    x += 1;
}
export fn b() void {
    x += 1;
}

// deduplicate undeclared identifier
//
// tmp.zig:2:5: error: use of undeclared identifier 'x'
